--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,28 @@
-/* Created by: Mr. Coxall
+/* Created by: Tymofii
 * Created on: Sep 2020
 * This file contains the CSS for index.html
 */
+.mdl-layout__header-row {
+  justify-content: center;
+  padding: 0;
+}
+
+.mdl-layout__content {
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+}
+
+.mdl-textfield__error {
+  color: rgb(68, 37, 135);
+}
+
+.page-content {
+  color: rgb(172, 9, 9);
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.25rem;
+}
+
+body {
+  background-color: rgb(171, 193, 191);
+}
